[package]
name = "nockchain-wallet-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
nockapp = { git = "https://github.com/swpsco/nockchain.git", rev = "e363364a31cb6275f29099699979e5b7ffb645c4", package = "nockapp" }
nockvm = { git = "https://github.com/swpsco/nockchain.git", rev = "e363364a31cb6275f29099699979e5b7ffb645c4", package = "nockvm" }
nockvm_macros = { git = "https://github.com/swpsco/nockchain.git", rev = "e363364a31cb6275f29099699979e5b7ffb645c4", package = "nockvm_macros" }
zkvm-jetpack = { git = "https://github.com/swpsco/nockchain.git", rev = "e363364a31cb6275f29099699979e5b7ffb645c4", package = "zkvm-jetpack" }

bardecoder = { version = "0.5.0" }
clap = { version = "4.4.4", features = ["derive"] }
crossterm = { version = "0.28.1" }
either = { version = "1.9.0" }
getrandom = { version = "0.2.15", features = ["std"] }
image = { version = "0.24.7" }
qrcode = { version = "0.13" }
ratatui = { version = "0.29.0" }
tempfile = { version = "3.3" }
termimad = { version = "0.31.0" }
thiserror = { version = "2.0.11"}
tokio = { version = "1.32", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "rt",
    "signal",
] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "env-filter",
    "registry",
] }
